--- a/OptimizelyFeatureRolloutTest/OptimizelyFeatureRolloutTest/Views/_ViewStart.cshtml
+++ b/OptimizelyFeatureRolloutTest/OptimizelyFeatureRolloutTest/Views/_ViewStart.cshtml
@@ -4,5 +4,28 @@
 
 @if (MvcApplication.EnableMessengerChat)
 {
+    <!-- Messenger Chat Plugin Code -->
+    <div id="fb-root"></div>
+    <script>
+        window.fbAsyncInit = function() {
+          FB.init({
+            xfbml            : true,
+            version          : 'v10.0'
+          });
+        };
 
+        (function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
+
+    <!-- Your Chat Plugin code -->
+    <div class="fb-customerchat"
+         attribution="biz_inbox"
+         page_id="106580551589279">
+    </div>
 }
