test that page id variable is not null

--- a/OptimizelyFeatureRolloutTest/OptimizelyFeatureRolloutTest/Views/_ViewStart.cshtml
+++ b/OptimizelyFeatureRolloutTest/OptimizelyFeatureRolloutTest/Views/_ViewStart.cshtml
@@ -15,7 +15,7 @@
     var pageId = decision.Variables.GetValue<string>("page_id");
 }
 
-@if (enableMessengerChat)
+@if (enableMessengerChat & !string.IsNullOrWhiteSpace(pageId))
 {
     <!-- Messenger Chat Plugin Code -->
     <div id="fb-root"></div>
