--- a/OptimizelyFeatureRolloutTest/OptimizelyFeatureRolloutTest/Views/_ViewStart.cshtml
+++ b/OptimizelyFeatureRolloutTest/OptimizelyFeatureRolloutTest/Views/_ViewStart.cshtml
@@ -4,7 +4,7 @@
     //setting up Optimizely;
     var optimizelyClient = OptimizelySDK.OptimizelyFactory.NewDefaultInstance(System.Configuration.ConfigurationManager.AppSettings["Optimizely:sdkKey"]);
 
-    //for the sake of the demo we will test for all users
+    //for the sake of the test project
     var user = optimizelyClient.CreateUserContext("");
 
     //feature flag
